# spqr

./: README.md
doc/: ug.aux  ug.dvi  ug.tex
example/: SPQR_MC  input.spqr  params.spqr
sample/: input.mc
src/: 0.9.9  1.0  MPI_SPQR_MC_0.9.5.1  MPI_SPQR_SA_0.9.5.1  MPI_SPQR_ermsdSA_0.9.5.1  MPI_SPQR_wrmSA_0.9.5.1  Make_mpi  Make_no_mpi  Make_pdb  Makefile  Makefile.in  Maketemp  PDBERMSD_0.9.5.1  SPQR_ENERG_0.9.5.1  SPQR_MC_0.9.5.1  SPQR_MCermsd_0.9.5.1  SPQR_SA_0.9.5.1  SPQR_wrmMC_0.9.5.1  Sim_tempering.c  WRITETABLES  config.status  configure  dump_energies.c  extract_trajs_NNT5.c  find_min_energs.c  find_min_energs_par.c  get_energ.c  make_here  mc.h  mc_base_pairing.c  mc_base_pairing.h  mc_checkpoints.c  mc_checkpoints.h  mc_end.c  mc_energies.c  mc_energies.h  mc_ermsd.c  mc_ermsd.h  mc_global.c  mc_global.h  (+22 more)
tables_src/: table_bpB_03_gA3.tab  table_bpB_10_gS3.tab  table_bpI_0_gA3.tab  table_bpI_0_gS2.tab  table_bpI_1_gH3.tab  table_bpI_2_gH3.tab  table_nnB_01_0_s33.tab  table_nnB_01_0_s53.tab  table_nnB_10_0_s53.tab  table_nnB_20_0_s35.tab  table_nnB_20_0_s55.tab  table_nnB_22_0_s53.tab  table_nnB_30_0_s35.tab  table_nnN_00_2.tab  table_nnN_00_2i_F.tab  table_nnN_01_0s3.tab  table_nnN_01_2.tab  table_nnN_01_2_F.tab  table_nnN_01_2i.tab  table_nnN_03_0s5.tab  (+18 more)
tools/src/: configure.ac  get_energ.c  mc_base_pairing.c  mc_checkpoints.c  mc_checkpoints.h  mc_end.c  mc_end.h  mc_energies.c  mc_energies.h  mc_ermsd.c  mc_ermsd.h  mc_global.c  mc_global.h  mc_initialization.c  mc_initialization.h  mc_integrate.c  mc_utils.c  mpi_mc.c  sa_impl.c  sim_anneal.c
(+1267 files in other folders)
